[package]
name = "nodora"
version = "0.2.0"
edition = "2021"
rust-version = "1.74"
license = "Apache-2.0"
description = "Rust bindings for the Nodora rule engine"
repository = "https://github.com/nodora-org/nodora-rs"
readme = "README.md"
keywords = ["nodora", "rules", "rule-engine", "ffi"]
categories = ["api-bindings"]
links = "nodora"
exclude = ["/.github", "/dist", "/target"]

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"

[build-dependencies]
sha2 = "0.10"

[package.metadata.docs.rs]
default-target = "x86_64-unknown-linux-gnu"
